# wasistudent

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/app/: build.gradle.kts
assets/icons/: README.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/config/: api_config.dart  constants.dart  routes.dart  theme.dart
lib/data/: contract_repository.dart  database.dart  favorites_repository.dart  review_repository.dart  room_repository.dart  user_repository.dart
lib/models/: chat_message.dart  notification.dart  payment.dart  review.dart  room.dart  roommate_profile.dart  trust_score.dart  user.dart  user_preferences.dart
lib/providers/: auth_provider.dart  chat_provider.dart  navigation_provider.dart  notification_provider.dart  payment_provider.dart  preference_provider.dart  review_provider.dart  role_provider.dart  room_provider.dart  theme_provider.dart
lib/screens/: add_review_screen.dart  auth_screen.dart  chat_detail_screen.dart  chat_list_screen.dart  comparison_screen.dart  contract_flow_screen.dart  discover_screen.dart  edit_profile_screen.dart  explore_map_screen.dart  explore_screen.dart  favorites_screen.dart  home_screen.dart  notifications_screen.dart  onboarding_screen.dart  payment_detail_screen.dart  payments_screen.dart  preferences_screen.dart  profile_screen.dart  publish_room_screen.dart  reviews_screen.dart  (+7 more)
linux/: CMakeLists.txt
prototype-html/: index.html
prototype-web/: README.md  index.html
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+101 files in other folders)
